[BACKLOG-21444] Update the code to follow the changes done for avro